[package]
name = "ffplayout"
description.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["desktop", "embed_frontend"]
desktop = ["ff-engine/desktop"]
embed_frontend = []
dev-metrics = ["dep:console-subscriber", "dep:tracing-subscriber", "tokio/tracing"]
processing-bench = ["ff-engine/processing-bench"]

[dependencies]
ff-engine = { path = "../engine", default-features = false, features = [
    "tokio",
] }

axum = { version = "0.8", features = ["multipart", "macros"] }
argon2 = "0.5"
async-walkdir = "2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
console-subscriber = { version = "0.5", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
derive_more = { version = "2", features = ["display"] }
faccess = "0.2"
flexi_logger = { version = "0.31", features = ["async", "colors", "kv"] }
iana-time-zone = "0.1"
include_dir = "0.7"
inquire = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lazy-limit = "1"
lettre = { version = "0.11", features = [
    "builder",
    "rustls-tls",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
], default-features = false }
lexical-sort = "0.3"
local-ip-address = "0.6"
log = { version = "0.4", features = [
    "std",
    "serde",
    "kv",
    "kv_std",
    "kv_sval",
    "kv_serde",
] }
mime_guess = "2"
nix = { version = "0.31", features = ["user", "fs"] }
notify = "8.0"
notify-debouncer-full = { version = "*", default-features = false }
path-clean = "1.0"
protect-axum = "0.2"
rand = "0.10"
real = { version = "0.1", features = ["axum"] }
regex = "1"
relative-path = "2"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
sanitize-filename = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.39", features = ["linux-netdevs", "linux-tmpfs"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml_edit = { version = "0.25", features = ["serde"] }
ts-rs = { version = "12", features = ["chrono-impl", "no-serde-warnings"] }
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
build-print = "1"

[[bin]]
name = "ffplayout"
path = "src/main.rs"

# DEBIAN DEB PACKAGE
[package.metadata.deb]
name = "ffplayout"
priority = "optional"
section = "net"
license-file = ["../../LICENSE", "0"]
depends = "libasound2t64"
suggests = ["ffmpeg"]
copyright = "Copyright (c) 2024, Jonathan Baecker. All rights reserved."
assets = [
    [
        "target/release/ffplayout",
        "/usr/bin/",
        "755",
    ],
    [
        "../../assets/dummy.vtt",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../../assets/logo.png",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../../assets/ffplayout.conf",
        "/usr/share/ffplayout/ffplayout.conf.example",
        "644",
    ],
    [
        "../../README.md",
        "/usr/share/doc/ffplayout/README",
        "644",
    ],
    [
        "../../assets/ffplayout.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
]
maintainer-scripts = "../../debian/"
systemd-units = { enable = true, unit-scripts = "../../assets" }

[package.metadata.deb.variants.arm64]
assets = [
    [
        "target/release/ffplayout",
        "/usr/bin/",
        "755",
    ],
    [
        "../../assets/dummy.vtt",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../../assets/logo.png",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../../assets/ffplayout.conf",
        "/usr/share/ffplayout/ffplayout.conf.example",
        "644",
    ],
    [
        "../../README.md",
        "/usr/share/doc/ffplayout/README",
        "644",
    ],
    [
        "../../assets/ffplayout.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
]

# RHEL RPM PACKAGE
[package.metadata.generate-rpm]
name = "ffplayout"
license = "GPL-3.0"
assets = [
    { source = "../../target/release/ffplayout", dest = "/usr/bin/ffplayout", mode = "755" },
    { source = "../../assets/ffplayout.service", dest = "/lib/systemd/system/ffplayout.service", mode = "644" },
    { source = "../../README.md", dest = "/usr/share/doc/ffplayout/README", mode = "644" },
    { source = "../../assets/ffplayout.1.gz", dest = "/usr/share/man/man1/ffplayout.1.gz", mode = "644", doc = true },
    { source = "../../LICENSE", dest = "/usr/share/doc/ffplayout/LICENSE", mode = "644" },
    { source = "../../assets/dummy.vtt", dest = "/usr/share/ffplayout/dummy.vtt", mode = "644" },
    { source = "../../assets/logo.png", dest = "/usr/share/ffplayout/logo.png", mode = "644" },
    { source = "../../assets/ffplayout.conf", dest = "/usr/share/ffplayout/ffplayout.conf.example", mode = "644" },
    { source = "../../debian/postinst", dest = "/usr/share/ffplayout/postinst", mode = "755" },
]
auto-req = "no"
post_install_script = "/usr/share/ffplayout/postinst"
