[package]
name = "ff-engine"
description = "FFmpeg-based real-time playout library"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["desktop"]
desktop = ["dep:cpal", "dep:softbuffer", "dep:winit"]
processing-bench = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1"
cpal = { version = "0.18", optional = true }
cosmic-text = "0.19"
ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg.git" }
log = { version = "0.4", features = ["kv"] }
regex = "1"
rten-simd = "0.24"
softbuffer = { version = "0.4", optional = true }
tokio = { version = "1.44", optional = true, features = ["rt", "sync"] }
winit = { version = "0.30", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"

[[bench]]
name = "overlay_blend"
harness = false
