[package]
name = "ff-engine"
description = "FFmpeg-based real-time playout library"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["desktop"]
desktop-base = ["dep:cpal", "dep:winit"]
desktop-gpu = ["desktop-base", "dep:bytemuck", "dep:pollster", "dep:wgpu"]
desktop = ["desktop-gpu"]
# Cargo features are additive; when both renderers are enabled, desktop-gpu takes precedence.
desktop-cpu = ["desktop-base", "dep:softbuffer"]
processing-bench = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1"
bytemuck = { version = "1", optional = true }
cpal = { version = "0.18", optional = true }
cosmic-text = "0.19"
ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg.git" }
log = { version = "0.4", features = ["kv"] }
pollster = { version = "1.0", optional = true }
regex = "1"
rten-simd = "0.24"
softbuffer = { version = "0.4", optional = true, default-features = false, features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "x11-dlopen",
] }
tokio = { version = "1.44", optional = true, features = ["rt", "sync"] }
winit = { version = "0.30", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
wgpu = { version = "30", optional = true, default-features = false, features = ["std", "parking_lot", "vulkan", "gles", "wgsl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "30", optional = true, default-features = false, features = ["std", "parking_lot", "dx12", "gles", "wgsl"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { version = "30", optional = true, default-features = false, features = ["std", "parking_lot", "metal", "wgsl"] }

[target.'cfg(target_os = "android")'.dependencies]
wgpu = { version = "30", optional = true, default-features = false, features = ["std", "parking_lot", "gles", "wgsl"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
naga = { version = "30", features = ["wgsl-in"] }

[[bench]]
name = "overlay_blend"
harness = false
